--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ APScheduler==3.6.3
 cachetools==4.2.2
 certifi==2024.8.30
 chardet==3.0.4
-googletrans==4.0.0rc1
 h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
@@ -11,7 +10,6 @@ httpcore==0.9.1
 httpx==0.13.3
 hyperframe==5.2.0
 idna==2.10
-python-telegram-bot==13.15
 pytz==2024.2
 rfc3986==1.5.0
 six==1.16.0
@@ -19,5 +17,7 @@ sniffio==1.3.1
 tornado==6.1
 tzdata==2024.2
 tzlocal==5.2
-urllib3
+python-telegram-bot==13.8
 googletrans==4.0.0-rc1
+urllib3
+six
